<resources>
    <string name="app_name">@string/get_layout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="get_layout">Получи раскладку</string>
    <string name="conversions">Конвертация</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>

    <string name="text_russian">русская</string>
    <string name="text_english">английская</string>

    <string name="text_convert">конвертировать</string>

    <string name="notification_copy_result">Результат скопирован</string>

    <string name="send_to">Отправить через</string>

    <string name="exit_dialog_title">Выйти?</string>
    <string name="exit_dialog_message">Вы действительно хотите это сделать?</string>
    <string name="exit_dialog_positive_button">Да</string>
    <string name="exit_dialog_negative_button">Нет</string>

    <string name="save_data_title">Сохранять данные</string>
    <string name="save_data_summary">Сохранять историю конвертации и направление языка</string>
    <string name="not_keyboard_start_title">Не показывать клавиатуру</string>
    <string name="not_keyboard_start_summary">Не показывать клавиатуру при старте приложения?</string>
    <string name="exit_alert_title">Не уведомлять о выходе</string>
    <string name="exit_alert_summary">Не задавать вопрос о выходе из приложения?</string>
    <string name="dark_theme_title">Использовать темную тему</string>
    <string name="dark_theme_summary">Может потребоваться перезагрузка</string>
    <string name="suggestions_title">Подсказки клавиатуры</string>
    <string name="suggestions_summary">Разрешить клавиатуре подсказывать</string>

    <string name="click_exit_application">Нажмите еще раз для выхода из приложения</string>

    <string name="about_summary">
        <![CDATA[
        <div>Приложение \"Получи раскладку\"</div>
        <div>версия %1$s</div>
        <div align="center">Приложение \"Получи раскладку\" позволяет <b>получить</b> для вашего текста нужную раскладку клавиатуры PC в различных языковых вариантах.</div>
        <div align="center">Icon made by Vectors Market (https://www.flaticon.com/authors/vectors-market) from www.flaticon.com</div>
        <div>© 2019 Get layout</div>
        ]]>
    </string>

    <string name="shift">Shift</string>
    <string name="caps_lock">Caps Lock</string>

    <string name="delete_history">Удалить историю ?</string>
    <string name="delete_for">Удалить \"%1$s\" ?</string>
    <string name="yes">Да</string>

    <string name="info_modifiers">Используйте модификаторы так же, как вы их используете на компьютерной клавиатуре</string>

    <string name="empty_data">Нет конвертаций</string>

</resources>
