<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isSaveData"
            type="boolean" />

        <variable
            name="isNotExitAlert"
            type="boolean" />

        <variable
            name="isDarkTheme"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSaveData"
            style="@style/RippleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tvTitleSaveData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/save_data_title"
                android:textAppearance="@style/TextMedium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSummarySaveData"
                app:layout_constraintEnd_toStartOf="@+id/cbSaveData"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Сохранять данные" />

            <TextView
                android:id="@+id/tvSummarySaveData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save_data_summary"
                android:textAppearance="@style/TextRegular"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cbSaveData"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleSaveData"
                tools:text="Сохранять ввод, результат и настройки приложения" />

            <CheckBox
                android:id="@+id/cbSaveData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{isSaveData}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clExitAlert"
            style="@style/RippleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSaveData">


            <TextView
                android:id="@+id/tvTitleExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/exit_alert_title"
                android:textAppearance="@style/TextMedium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSummaryExit"
                app:layout_constraintEnd_toStartOf="@+id/cbNotExitAlert"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSummaryExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/exit_alert_summary"
                android:textAppearance="@style/TextRegular"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cbNotExitAlert"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleExit" />

            <CheckBox
                android:id="@+id/cbNotExitAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{isNotExitAlert}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDarkTheme"
            style="@style/RippleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clExitAlert">


            <TextView
                android:id="@+id/tvTitleDarkTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dark_theme_title"
                android:textAppearance="@style/TextMedium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSummaryDarkTheme"
                app:layout_constraintEnd_toStartOf="@+id/cbDarkTheme"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSummaryDarkTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dark_theme_summary"
                android:textAppearance="@style/TextRegular"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cbDarkTheme"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDarkTheme" />

            <CheckBox
                android:id="@+id/cbDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{isDarkTheme}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>