<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoading"
            type="boolean" />
        <variable
            name="inputText"
            type="String" />
        <variable
            name="resultText"
            type="String" />
        <variable
            name="shift"
            type="boolean" />
        <variable
            name="capsLock"
            type="boolean" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorGray3"
        tools:context=".ui.fragments.ConversionsFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvDirection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorGray4"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/rvConversions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDir"
                style="@style/RippleLightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.592"
                    app:srcCompat="@drawable/ic_compare_arrows" />

                <TextView
                    android:id="@+id/tvDir1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/text_russian"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivChange"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Русский" />

                <TextView
                    android:id="@+id/tvDir2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/text_english"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivChange"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Английский" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvConversions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorGray3"
            android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/mcvInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcvDirection">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorGray4"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvConversions">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clModifiers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbShift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/shift"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cbCapsLock"
                        app:layout_constraintStart_toEndOf="@+id/ivInfoModifiers"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/cbCapsLock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/caps_lock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cbShift"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivInfoModifiers"
                        style="@style/RippleLightStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_help" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:imeOptions="actionDone"
                        android:inputType="textVisiblePassword|textNoSuggestions|textMultiLine"
                        android:maxHeight="96dp"
                        android:focusedByDefault="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivSend"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivSend"
                        style="@style/RippleLightStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/text_convert"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tietInput"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tietInput"
                        app:layout_constraintTop_toTopOf="@+id/tietInput"
                        app:layout_constraintVertical_bias="0.52"
                        app:srcCompat="@drawable/ic_send" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>